# Smart-Task-Management-System-with-Gamification

./: .gitignore  ARCHITECTURE.md  BUILD_GUIDE.md  BUILD_INSTRUCTIONS.md  CMakeLists.txt  INCLUDE_ISSUES_REPORT.md  INCLUDE_PATH_EXPLANATION.md  MEMBER_A_FEEDBACK.md  MEMBER_C_UPDATE_STATUS.md  MEMBER_D_TASK_PLAN.md  MEMBER_E_CODE_GUIDE.md  Makefile  PROGRESS_SUMMARY_CN.md  PROJECT_PROGRESS_ANALYSIS.md  PROJECT_PROGRESS_REPORT.md  PROJECT_SUMMARY.md  README.md  README_CN.md  REMINDER_SYSTEM_ANALYSIS.md  RESOURCE_REQUIREMENTS.md  SOLUTION_SUMMARY.md  SUMMARY.md  TASKMANAGER_ANALYSIS.md  TASK_MODULE_DETAILED_ANALYSIS.md  UI_PROPOSAL.md  USER_GUIDE_CN.md  WEB_UI_PLAN.md  build.ps1  build_cmake.ps1  build_cmake.sh  main_gui.cpp  task_manager.db
_codeql_build_dir/: Makefile  smarttaskgui_qmltyperegistrations.cpp
_codeql_build_dir/.qt_plugins/: Qt6_QmlPlugins_Imports_SmartTaskGUI.rsp
_codeql_build_dir/.rcc/: SmartTaskGUI_raw_qml_0.qrc  qmake_SmartTaskGUI.qrc
_codeql_build_dir/.rcc/qmlcache/: SmartTaskGUI_qml_loader_file_list.rsp  SmartTaskGUI_qmlcache_loader.cpp
_codeql_build_dir/.rcc/qmlcache/SmartTaskGUI_resources/qml/: Main_qml.cpp  QuestBoard_qml.cpp  QuestCard_qml.cpp
_codeql_build_dir/meta_types/: SmartTaskGUI_json_file_list.txt  SmartTaskGUI_json_file_list.txt.timestamp  qt6smarttaskgui_release_metatypes.json
common/: entities.h
data/: achievement_definitions.csv  user_achievements_1.csv
include/HeatmapVisualizer/: HeatmapVisualizer.h
include/Pomodoro/: pomodoro.h
include/achievement/: AchievementManager.h
include/database/: DatabaseManager.h
include/database/DAO/: AchievementDAO.h  ExperienceDAO.h  ProjectDAO.h  ReminderDAO.h  SettingsDAO.h  StatisticsDAO.h  TaskDAO.h
include/reminder/: ReminderSystem.h
include/task/: TaskManager.h  task.h
include/ui/: TaskModel.h  UIManager.h
qml/: Main.qml
qml/components/: CelebrationEffect.qml  GamificationHUD.qml  NavigationBar.qml  ProgressBar.qml  TaskCard.qml
qml/pages/: AchievementsPage.qml  ProjectsPage.qml  SettingsPage.qml  StatisticsPage.qml  TaskListPage.qml
qml/resources/: qml.qrc
resources/: qml.qrc  qml.src
resources/images/: README.md
resources/qml/: AppLauncher.qml  FocusView.qml  Main.qml  MainView.qml  NewProjectDialog.qml  NewReminderDialog.qml  NewTaskDialog.qml  ProjectCard.qml  ProjectView.qml  QuestBoard.qml  QuestCard.qml  QuestView.qml  ReminderView.qml  StatsView.qml
resources/web/: index.html
resources/web/static/: main.js  style.css
src/: main.cpp  main_gui.cpp
src/HeatmapVisualizer/: HeatmapVisualizer.cpp
src/Pomodoro/: pomodoro.cpp
src/achievement/: AchievementManager.cpp
src/database/: databasemanager.cpp
src/database/DAO/: AchievementDAO.cpp  ReminderDAO.cpp  TaskDAOImpl.cpp
src/project/: Project.cpp  ProjectManager.cpp
src/qt/: main_qt.cpp
src/qt/controllers/: GamificationController.cpp  GamificationController.h  TaskController.cpp  TaskController.h
src/qt/models/: ChallengeListModel.cpp  ChallengeListModel.h  ProjectListModel.cpp  ProjectListModel.h  TaskListModel.cpp  TaskListModel.h
src/reminder/: ReminderSystem.cpp
src/task/: TaskManager.cpp  task.cpp
src/ui/: GameController.cpp  GameController.h  ProjectModel.cpp  ProjectModel.h  ReminderModel.cpp  ReminderModel.h  TaskModel.cpp  TaskModel.h  UIManager.cpp
src/web/: WebServer.cpp  WebServer.h
test_data/: achievement_definitions.csv  user_achievements_1.csv
tests/: ReminderAchievementTest.cpp
ui/: ReminderModel.cpp  ReminderModel.h  TaskModel.cpp
